# moecs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example/ggez/: Cargo.toml
example/ggez/src/: main.rs
example/hello_world/: Cargo.toml
example/hello_world/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: component.rs  engine.rs  entity.rs  lib.rs  system.rs  test.rs
src/component/: component.rs  component_bundle.rs  component_manager.rs  mod.rs  test.rs
src/entity/: entity.rs  entity_builder.rs  entity_manager.rs  mod.rs  query.rs  query_cache.rs  test.rs
src/manager/: component_manager.rs  entity_manager.rs  mod.rs  system_manager.rs
src/system/: mod.rs  system.rs  system_group.rs  system_manager.rs  system_param.rs  test.rs
src/util/: execution_mode.rs  mod.rs  property_id.rs
