[package]
name = "moecs"
description = "Micro ECS engine. A small and lightweight ECS engine for Rust projects."
version = "0.1.0"
repository = "https://github.com/mccloskeybr/moecs"
keywords = ["moecs", "ecs", "game", "engine"]
authors = ["Brendan McCloskey <brendan.mccloskey@gmail.com>"]

edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["game-development"]

[dependencies]
moecs_macros = { path = "macros" }
rayon = "1.8.0"
